# GenrAItOR

./: .env.example  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Makefile  Modelfile  README.md  environment.yml  paper.md  pyproject.toml  requirements.txt
data/: .gitignore
docs/: MultiomicsSeed24_v1.docx  Research_Computing_GPU_Resource_Training_Feb_2021_v2.pptx
examples/: README.md  create_context.ipynb  create_context.qmd  example-uniprot-api-rag-output.txt  example_context_large.txt  raft-dataset.py  raft-example-io.md  run_raft_sbatch.sh  uniprot-pubmed-api-rag.py
genraitor/: __main__.py
genraitor/cli/: __init__.py  data.py  evaluate.py  raft.py  rag.py  train.py
genraitor/conf/: __init__.py  config.toml  models.py
genraitor/data/: deepimv.py  postprocess.py  pubmed.py  raft_dataset.py  raft_format.py  uniprot.py
genraitor/evaluate/: align.py
genraitor/models/: __init__.py  embedding.py  models.py
genraitor/raft/: strategies.py  train.py  tune.py
genraitor/rag/: data.py  embedding.py  run.py  uniprot_api.py
genraitor/synthetic/: raft_dataset.py
genraitor/tune/: __init__.py
genraitor/vector_store/: __init__.py
genraitor/web/: README.md  observablehq.config.js  package-lock.json
genraitor/web/src/: index.md  raft-dataset.md
paper/: paper.md  refs.bib
